--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,8 +1,18 @@
 .popup__container {
   position: relative;
   margin: 0 auto;
-  width: 430px;
-  height: 330px;
+  max-width: 430px;
+  max-height: 330px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 889px) {
+  .popup__container {
+    max-width: 282px;
+    height: 322px;
+  }
+}
