--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,3 +1,22 @@
 .popup__input {
-    border: none;
+  border: none;
+  border-bottom: 1px solid rgba(0,0,0,.2);
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  width: 358px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  align-self: center;
+  min-height: 27px;
+  outline: none;
+}
+
+@media screen and (max-width: 889px) {
+  .popup__input {
+    max-width: 238px;
+  }
 }
