--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,6 @@
 .popup__input {
   border: none;
   border-bottom: 1px solid rgba(0,0,0,.2);
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -11,12 +10,13 @@
   white-space: nowrap;
   overflow: hidden;
   align-self: center;
-  min-height: 27px;
+  margin-top: 30px;
   outline: none;
 }
 
 @media screen and (max-width: 889px) {
   .popup__input {
     max-width: 238px;
+    margin-top: 30px;
   }
 }
