--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,17 +1,16 @@
 .popup__title {
-  font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   margin: 0;
-  padding: 34px 0 54px 36px;
+  padding: 34px 64px 35px 36px;
 }
 
 @media screen and (max-width: 889px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    padding: 25px 22px 75px;
+    padding: 25px 22px 59px;
   }
 }
