--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,7 +3,7 @@
   width: 150px;
   height: 50px;
   border: 2px solid #FFFFFF;
-  background: url(../../../images/plus.png);
+  background: url(../../../images/plus.svg);
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 2px;
