--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,6 @@
 .profile__edit-button {
   margin: 24px 0 0 20px;
-  background: url(../../../images/karandash.png);
+  background: url(../../../images/edit.svg);
   border: 1px solid #FFF;
   background-position: center;
   background-repeat: no-repeat;
@@ -15,6 +15,9 @@
     margin: 28px 0 0 -26px;
     width: 18px;
     height: 18px;
+    background: url(../../../images/edit7.5px.svg);
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
 
