--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -11,7 +11,7 @@
 @media screen and (max-width: 889px) {
   .profile {
     padding: 43px 0 36px;
-    grid-template-columns: 1fr minmax(1px, auto) 1px 10px 1fr;
+    grid-template-columns: 1fr 270px 1px 10px 1fr;
     grid-template-areas:
     '. ava ava ava .' 
     '. name ebttn . .'
