--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,8 @@
 .place__image {
-  max-width: 282px;
-  max-height: 282px;
+  width: 100%;
+  height: 282px;
   grid-area: img;
+  object-fit: cover;
+  overflow: hidden;
+  cursor: pointer;
 }
