--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,7 +5,7 @@
   border-radius: 10px;
   overflow: hidden;
   display: grid;
-  grid-template-columns: 85% 15%;
+  grid-template-columns: 240px 42px;
   grid-template-areas: 'img img' 'title like';
   position: relative;
 }
