--- a/blocks/place/__like/_type_active/place__like_type_active.css
+++ b/blocks/place/__like/_type_active/place__like_type_active.css
@@ -1,11 +1,3 @@
 .place__like_type_active {
-  background-image: url(../../../images/hearth-black.svg);
-  border: none;
-  background-color: white;
-}
-
-.place__like_type_active:hover {
-    transition: 0.1s;
-    opacity: 0.6;
-    cursor: pointer;
+  background-image: url(../../../../images/hearth-black.svg);
 }
