--- a/src/blocks/place/place.css
+++ b/src/blocks/place/place.css
@@ -6,6 +6,6 @@
   overflow: hidden;
   display: grid;
   grid-template-columns: 240px 42px;
-  grid-template-areas: 'img img' 'title like';
+  grid-template-areas: 'img img' 'title like' 'title count' '.count';
   position: relative;
 }
