--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -6,6 +6,7 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__user-job/profile__user-job.css);
@@ -15,6 +16,7 @@
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__like/place__like.css);
+@import url(../blocks/place/__like-count/place__like-count.css);
 @import url(../blocks/place/__like/_type_active/place__like_type_active.css);
 @import url(../blocks/place/__delete/place__delete.css);
 @import url(../blocks/footer/footer.css);
